- Migrated to module system. - Re-worked the build system. It now can be build/test/deployed with ant alone. - Added JavaFX modules. - Added JUnit modules. - Added multiple ant tasks, including tasks that can deploy into standalone packages targeting the Linux and Windows platforms. - Migrated a lot of functions into a more general "Util" class -- to be used by multiple games. - Added a new game called "QuickCapture". - Moved assets (graphics) to their own folder. - Added a bunch of tests and fixed minor bugs.